--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     .fade-message {
       font-family: 'Pacifico', cursive;
       font-size: 2.5rem;
-      color: #10b981; /* Updated to green for consistency */
+      color: #10b981; /* Green for consistency */
       text-align: center;
       opacity: 0;
       animation: fadeInOut 8s infinite;
@@ -420,22 +420,193 @@
   <!-- Slideshow Carousel -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
+      <!-- Dynamically added slides below -->
+      <!-- Slide 1 -->
       <div class="swiper-slide">
-        <a href="images/photo1.jpg" data-lightbox="birthday-carousel">
-          <img src="images/photo1-thumbnail.jpg" alt="Photo 1">
+        <a href="img/pic1.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic1.jpg" alt="Photo 1">
         </a>
       </div>
+      <!-- Slide 2 -->
       <div class="swiper-slide">
-        <a href="images/photo2.jpg" data-lightbox="birthday-carousel">
-          <img src="images/photo2-thumbnail.jpg" alt="Photo 2">
+        <a href="img/pic2.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic2.jpg" alt="Photo 2">
         </a>
       </div>
+      <!-- Slide 3 -->
       <div class="swiper-slide">
-        <a href="images/photo3.jpg" data-lightbox="birthday-carousel">
-          <img src="images/photo3-thumbnail.jpg" alt="Photo 3">
+        <a href="img/pic3.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic3.jpg" alt="Photo 3">
         </a>
       </div>
-      <!-- Add more slides as needed -->
+      <!-- Slide 4 -->
+      <div class="swiper-slide">
+        <a href="img/pic4.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic4.jpg" alt="Photo 4">
+        </a>
+      </div>
+      <!-- Slide 5 -->
+      <div class="swiper-slide">
+        <a href="img/pic5.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic5.jpg" alt="Photo 5">
+        </a>
+      </div>
+      <!-- Slide 6 -->
+      <div class="swiper-slide">
+        <a href="img/pic6.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic6.jpg" alt="Photo 6">
+        </a>
+      </div>
+      <!-- Slide 7 -->
+      <div class="swiper-slide">
+        <a href="img/pic7.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic7.jpg" alt="Photo 7">
+        </a>
+      </div>
+      <!-- Slide 8 -->
+      <div class="swiper-slide">
+        <a href="img/pic8.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic8.jpg" alt="Photo 8">
+        </a>
+      </div>
+      <!-- Slide 9 -->
+      <div class="swiper-slide">
+        <a href="img/pic9.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic9.jpg" alt="Photo 9">
+        </a>
+      </div>
+      <!-- Slide 10 -->
+      <div class="swiper-slide">
+        <a href="img/pic10.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic10.jpg" alt="Photo 10">
+        </a>
+      </div>
+      <!-- Slide 11 -->
+      <div class="swiper-slide">
+        <a href="img/pic11.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic11.jpg" alt="Photo 11">
+        </a>
+      </div>
+      <!-- Slide 12 -->
+      <div class="swiper-slide">
+        <a href="img/pic12.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic12.jpg" alt="Photo 12">
+        </a>
+      </div>
+      <!-- Slide 13 -->
+      <div class="swiper-slide">
+        <a href="img/pic13.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic13.jpg" alt="Photo 13">
+        </a>
+      </div>
+      <!-- Slide 14 -->
+      <div class="swiper-slide">
+        <a href="img/pic14.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic14.jpg" alt="Photo 14">
+        </a>
+      </div>
+      <!-- Slide 15 -->
+      <div class="swiper-slide">
+        <a href="img/pic15.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic15.jpg" alt="Photo 15">
+        </a>
+      </div>
+      <!-- Slide 16 -->
+      <div class="swiper-slide">
+        <a href="img/pic16.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic16.jpg" alt="Photo 16">
+        </a>
+      </div>
+      <!-- Slide 17 -->
+      <div class="swiper-slide">
+        <a href="img/pic17.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic17.jpg" alt="Photo 17">
+        </a>
+      </div>
+      <!-- Slide 18 -->
+      <div class="swiper-slide">
+        <a href="img/pic18.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic18.jpg" alt="Photo 18">
+        </a>
+      </div>
+      <!-- Slide 19 -->
+      <div class="swiper-slide">
+        <a href="img/pic19.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic19.jpg" alt="Photo 19">
+        </a>
+      </div>
+      <!-- Slide 20 -->
+      <div class="swiper-slide">
+        <a href="img/pic20.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic20.jpg" alt="Photo 20">
+        </a>
+      </div>
+      <!-- Slide 21 -->
+      <div class="swiper-slide">
+        <a href="img/pic21.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic21.jpg" alt="Photo 21">
+        </a>
+      </div>
+      <!-- Slide 22 -->
+      <div class="swiper-slide">
+        <a href="img/pic22.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic22.jpg" alt="Photo 22">
+        </a>
+      </div>
+      <!-- Slide 23 -->
+      <div class="swiper-slide">
+        <a href="img/pic23.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic23.jpg" alt="Photo 23">
+        </a>
+      </div>
+      <!-- Slide 24 -->
+      <div class="swiper-slide">
+        <a href="img/pic24.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic24.jpg" alt="Photo 24">
+        </a>
+      </div>
+      <!-- Slide 25 -->
+      <div class="swiper-slide">
+        <a href="img/pic25.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic25.jpg" alt="Photo 25">
+        </a>
+      </div>
+      <!-- Slide 26 -->
+      <div class="swiper-slide">
+        <a href="img/pic26.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic26.jpg" alt="Photo 26">
+        </a>
+      </div>
+      <!-- Slide 27 -->
+      <div class="swiper-slide">
+        <a href="img/pic27.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic27.jpg" alt="Photo 27">
+        </a>
+      </div>
+      <!-- Slide 28 -->
+      <div class="swiper-slide">
+        <a href="img/pic28.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic28.jpg" alt="Photo 28">
+        </a>
+      </div>
+      <!-- Slide 29 -->
+      <div class="swiper-slide">
+        <a href="img/pic29.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic29.jpg" alt="Photo 29">
+        </a>
+      </div>
+      <!-- Slide 30 -->
+      <div class="swiper-slide">
+        <a href="img/pic30.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic30.jpg" alt="Photo 30">
+        </a>
+      </div>
+      <!-- Slide 31 -->
+      <div class="swiper-slide">
+        <a href="img/pic31.jpg" data-lightbox="birthday-carousel">
+          <img src="img/pic31.jpg" alt="Photo 31">
+        </a>
+      </div>
     </div>
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
