--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
       <!-- Dynamically added slides below -->
       <!-- Slide 1 -->
       <div class="swiper-slide">
-        <a href="img/pic1.jpg" data-lightbox="birthday-carousel">
-          <img src="img/pic1.jpg" alt="Photo 1">
+        <a href="img/Pic1.jpg" data-lightbox="birthday-carousel">
+          <img src="img/Pic1.jpg" alt="Photo 1">
         </a>
       </div>
       <!-- Slide 2 -->
