--- a/index.html
+++ b/index.html
@@ -565,8 +565,7 @@
     <ul class="flex justify-center space-x-6 py-4">
       <li><a href="#overlayMessage" class="text-lg font-medium hover:text-pink-500">Home</a></li>
       <li><a href="#loveQuotes" class="text-lg font-medium hover:text-pink-500">Quotes</a></li>
-      <li><a href="#loveStory" class="text-lg font-medium hover:text-pink-500">Our Story</a></li>
-      <li><a href="#surpriseMessages" class="text-lg font-medium hover:text-pink-500">Surprises</a></li>
+      <li><a href="#loveStory" class="text-lg font-medium hover:text-pink-500">To Skye</a></li>
     </ul>
   </nav>
 
@@ -787,7 +786,7 @@
   <!-- Love Quote Rotator -->
   <div id="loveQuotes" class="mt-10 max-w-2xl text-center fade-in-section">
     <h3 class="text-2xl font-semibold animated-header">Our Love in Words</h3>
-    <p id="currentQuote" class="text-lg italic text-pink-600">"Love is composed of a single soul inhabiting two bodies." - Aristotle</p>
+    <p id="currentQuote" class="text-lg italic text-pink-600">"The greatest thing you'll ever learn is just to love and be loved in return." - Eden Ahbez</p>
   </div>
 
   <!-- Typewriter Effect -->
@@ -849,16 +848,15 @@
     <div id="surprise6" class="hidden-surprise text-center text-lg text-red-600">I love your Sim house building skills.</div>
     <div id="surprise7" class="hidden-surprise text-center text-lg text-red-600">I love your city planning abilities in Cities Skylines.</div>
     <div id="surprise8" class="hidden-surprise text-center text-lg text-red-600">You may not be the best at carrying a Domino’s pizza out of the car, but that’s okay with me ❤️</div>
-    <!-- Removed surprise9 to match 8 buttons -->
   </div>
 
   <!-- Love Story Section -->
   <div id="loveStory" class="mt-10 max-w-3xl bg-pink-100 border-2 border-pink-300 rounded-lg p-6 fade-in-section">
-    <h3 class="text-2xl font-semibold text-pink-700 mb-4">Our Journey Together</h3>
+    <h3 class="text-2xl font-semibold text-pink-700 mb-4">I love you Skye!</h3>
     <p class="text-lg text-pink-800 mb-4">
-      From the moment we met, I knew there was something incredibly special about you. Our first date at the Epic Movie theater was unforgettable, despite the movie being less than stellar. Every moment since then has been filled with laughter, love, and countless beautiful memories. Whether we're jamming to Taylor Swift, planning pranks, or simply enjoying a lazy Sunday, being with you feels like home.
+      Skye, you are the most amazing Wife and Mom anyone could ever ask for. You mean so much to me and Addy, I can’t imagine life without you. From raising our amazing daughter together, lazy nights watching tv together, to concerts in St Louis together, life without you is amazing. I am always looking forward to what the next chapter will bring, and I know that whatever comes our way, we always find a way to overcome it. Happy birthday Skye, I love you!
     </p>
-    <img src="img/love-story.jpg" alt="Our Love Story" class="w-full h-64 object-cover rounded-md">
+    <img src="img/IMG_2811.jpeg" alt="Our Love Story" class="w-full h-64 object-cover rounded-md">
   </div>
 
   <!-- Confetti Container -->
@@ -875,7 +873,7 @@
       <div class="modal-tiles mt-6">
         <!-- Happy -->
         <div class="wordle-row">
-          <div class="wordle-cell animate-flip-bounce">H</div>
+          <div class="wordle-cell">H</div>
           <div class="wordle-cell">A</div>
           <div class="wordle-cell">P</div>
           <div class="wordle-cell">P</div>
@@ -891,11 +889,11 @@
         </div>
         <!-- Skye! -->
         <div class="wordle-row">
-          <div class="wordle-cell">S</div>
+          <div class="wordle-cell animate-flip-bounce">S</div>
           <div class="wordle-cell">K</div>
-          <div class="wordle-cell">Y</div>
+          <div class="wordle-cell animate-flip-bounce">Y</div>
           <div class="wordle-cell">E</div>
-          <div class="wordle-cell animate-flip-bounce">!</div>
+          <div class="wordle-cell">!</div>
         </div>
       </div>
       
@@ -1064,6 +1062,13 @@
 
       // Love Quote Rotator
       const quotes = [
+        '"The greatest thing you\'ll ever learn is just to love and be loved in return." - Eden Ahbez',
+        '"Love you too the moon at to Saturn." - Taylor Swift',
+        '"The best thing to hold onto in life is each other." - Audrey Hepburn',
+        '"To love and be loved is to feel the sun from both sides." — David Viscott.',
+        '"You can\'t blame gravity for falling in love." - Albert Einstein',
+        '"If one day the moon calls you by your name don\'t be surprised, because every night I tell her about you." — Shahrazad al-Khalij',
+        '"I love you the way a drowning man loves air. And it would destroy me to have you just a little." — Rae Carson',
         '"Love is composed of a single soul inhabiting two bodies." - Aristotle',
         '"You are the finest, loveliest, tenderest, and most beautiful person I have ever known—and even that is an understatement." - F. Scott Fitzgerald',
         '"I have waited for you, longer than you can imagine." - Unknown',
