--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
   <canvas id="heartCanvas"></canvas>
 
   <!-- Music Control Button -->
-  <div class="fixed top-4 right-4 z-50">
+  <div class="fixed top-12 right-4 z-50"> <!-- Changed top-4 to top-12 -->
     <button id="playPauseButton" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition transform hover:scale-105 shadow">
       Pause Music
     </button>
