--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
       // Love Quote Rotator
       const quotes = [
         '"The greatest thing you\'ll ever learn is just to love and be loved in return." - Eden Ahbez',
-        '"Love you too the moon at to Saturn." - Taylor Swift',
+        '"Love you to the moon and to Saturn." - Taylor Swift',
         '"The best thing to hold onto in life is each other." - Audrey Hepburn',
         '"To love and be loved is to feel the sun from both sides." — David Viscott.',
         '"You can\'t blame gravity for falling in love." - Albert Einstein',
