--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
       <li><a href="#overlayMessage" class="text-lg font-medium hover:text-pink-500">Home</a></li>
       <li><a href="#loveQuotes" class="text-lg font-medium hover:text-pink-500">Quotes</a></li>
       <li><a href="#loveStory" class="text-lg font-medium hover:text-pink-500">To Skye</a></li>
+      <!-- Added "A Mystery?" link as requested -->
       <li><a href="amystery.html" class="text-lg font-medium hover:text-pink-500">A Mystery?</a></li>
     </ul>
   </nav>
@@ -594,7 +595,7 @@
   <canvas id="heartCanvas"></canvas>
 
   <!-- Music Control Button -->
-  <div class="fixed top-12 right-4 z-50"> <!-- Changed top-4 to top-12 -->
+  <div class="fixed top-12 right-4 z-50">
     <button id="playPauseButton" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition transform hover:scale-105 shadow">
       Pause Music
     </button>
@@ -609,7 +610,6 @@
   <!-- Slideshow Carousel -->
   <div class="swiper-container fade-in-section">
     <div class="swiper-wrapper">
-      <!-- Dynamically added slides below -->
       <!-- Slide 1 -->
       <div class="swiper-slide">
         <a href="img/Pic1.jpg" data-lightbox="birthday-carousel">
@@ -622,10 +622,10 @@
           <img src="img/pic2.jpg" alt="Photo 2">
         </a>
       </div>
-      <!-- Slide 3 -->
+      <!-- Slide 3 changed to IMG_3192.jpeg as requested -->
       <div class="swiper-slide">
-        <a href="img/pic3.jpg" data-lightbox="birthday-carousel">
-          <img src="img/pic3.jpg" alt="Photo 3">
+        <a href="img/IMG_3192.jpeg" data-lightbox="birthday-carousel">
+          <img src="img/IMG_3192.jpeg" alt="Photo 3">
         </a>
       </div>
       <!-- Slide 4 -->
