--- a/amystery.html
+++ b/amystery.html
@@ -172,7 +172,7 @@
       </svg>
     </div>
     <!-- Title changed to "a tall cat will go racing" -->
-    <h1>a tall cat will go racing</h1>
+    <h1>Cool Watch Go Agile</h1>
   </header>
 
   <!-- Game Container -->
